--- a/main.ipynb
+++ b/main.ipynb
@@ -4,17 +4,16 @@
    "cell_type": "markdown",
    "source": [
     "<div style=\"padding:20px 30px 30px;\n",
-    "            color:#000000;\n",
+    "            color:#fff;\n",
     "            font-size:40px;\n",
     "            display:fill;\n",
     "            text-align:center;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:400\">\n",
-    "#\n",
     "\n",
     "# *ML-решение для автоматического определения уровня сложности англоязычных фильмов.*\n",
     "\n",
@@ -28,14 +27,23 @@
   {
    "cell_type": "markdown",
    "source": [
+    "![](https://amlanguage.com/app/uploads/2017/03/grid.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<div style=\"padding:0px 40px 30px;\n",
-    "            color:#000;\n",
+    "            color:#fff;\n",
     "            font-size:110%;\n",
     "            display:fill;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:450;\">\n",
     "\n",
@@ -57,6 +65,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -64,8 +79,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-12T02:15:58.960807Z",
-     "end_time": "2023-07-12T02:15:58.961954Z"
+     "start_time": "2023-07-12T10:30:43.784494Z",
+     "end_time": "2023-07-12T10:30:43.787205Z"
     }
    }
   },
@@ -73,14 +88,14 @@
    "cell_type": "markdown",
    "source": [
     "<div style=\"padding:0px 20px 10px;\n",
-    "            color:#000;\n",
+    "            color:#fff;\n",
     "            font-size:15px;\n",
     "            display:fill;\n",
     "            text-align:center;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:400\">\n",
     "\n",
@@ -98,21 +113,25 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-12T10:30:44.071587Z",
+     "end_time": "2023-07-12T10:30:44.075651Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
     "<div style=\"padding:0px 20px 10px;\n",
-    "            color:#000;\n",
+    "            color:#fff;\n",
     "            font-size:15px;\n",
     "            display:fill;\n",
     "            text-align:center;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:400\">\n",
     "\n",
@@ -130,21 +149,25 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-12T10:30:44.399807Z",
+     "end_time": "2023-07-12T10:30:44.403718Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
     "<div style=\"padding:0px 20px 10px;\n",
-    "            color:#000;\n",
+    "            color:#fff;\n",
     "            font-size:15px;\n",
     "            display:fill;\n",
     "            text-align:center;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:400\">\n",
     "\n",
@@ -162,21 +185,25 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-12T10:30:44.740164Z",
+     "end_time": "2023-07-12T10:30:44.746135Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
     "<div style=\"padding:0px 20px 10px;\n",
-    "            color:#000;\n",
+    "            color:#fff;\n",
     "            font-size:15px;\n",
     "            display:fill;\n",
     "            text-align:center;\n",
     "            border-radius:20px;\n",
     "            border: 5px double;\n",
-    "            border-color:#201E20;\n",
-    "            background-color: #5d9b9b;\n",
+    "            border-color:#2ff;\n",
+    "            background-color: #799fae;\n",
     "            overflow:hidden;\n",
     "            font-weight:400\">\n",
     "\n",
@@ -186,6 +213,19 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-12T10:33:31.507722Z",
+     "end_time": "2023-07-12T10:33:31.531584Z"
+    }
    }
   },
   {
